# bloki

./: .editorconfig  .gitignore  README.md  app.tsx  global.d.ts  index.html  nodemon.json  overrides.d.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.ts  tsconfig.base.json  tsconfig.json  types.d.ts  vite.config.ts
api/: .gitignore  Cargo.toml  appsettings.Development.json  appsettings.json  bloki.csproj  db.cs  initial-data.cs  main.rs  multiplayer.hub.cs  package.json  program.cs  rustfmt.toml
api/dbschema/: default.esdl
api/dbschema/migrations/: 00001.edgeql
api/migrations/: 20220424121853_initial.Designer.cs  20220424121853_initial.cs  20220516173541_initial.Designer.cs  20220516173541_initial.cs  BlokiDbContextModelSnapshot.cs
api/misc/: miniprofile-query-logger.cs
api/models/: models.cs
api/resolvers/: user-info.graphql.cs  vsyacoe.graphql.cs
api/src/: main.rs
client/: .gitignore  .prettierrc  app.tsx  index.html  package.json  tsconfig.json  vite-plugin-inline-css-modules.ts  vite.config.ts
components/: app.store.tsx
lib/: WebSocketMessages.ts  app-store.tsx  app.store.tsx  capacitor.ts  doc-controller.ts  entities.ts  helpers.ts  network.types.ts  solid-hooks.ts
misc/: git.js
pages/: test2.tsx
server/: db.ts  doc-server.ts  index.ts  nodemon.json  tg-console.ts  tsconfig.json
static/: data.json  default.data.json
stores/: grid-store.tsx
tests/: i18.spec.js  i18.spec.ts  jsconfig.json  package.json  playwright.config.js  playwright.config.ts  tsconfig.json  welcome-page.spec.ts
web/: .gitignore  .prettierrc  __.ts  (+12 more)
(+470 files in other folders)
