[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.0-rc.3", features = ["ws", "json", "headers"] }
edgedb-tokio = "0.3.0"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros"] }

[[bin]]
name = "api"
path = "main.rs"
